# IndorsementStuff

./: .env.production  .env.production.template  .gitignore  .pre-commit-config.yaml  COMMIT_SUMMARY.md  CONTENT_INVENTORY_FOR_REVIEW.md  CORNELL_INTEGRATION_COMPLETE.md  CREDENTIAL_SETUP_GUIDE.md  DEPLOYMENT_COMPLETE.md  ExtractPage.ps1  IMMEDIATE_COMPLIANCE_IMPROVEMENTS.md  IndorsementStuff.code-workspace  LEGAL_REVIEW_PACKAGE.md  LEGITIMATE_LEGAL_INFO.md  MultiUserBackup.ps1  README-DEPLOYMENT.md  README.md  REMOVED_PACKAGES.md  SECURITY.md  TRANSFORMATION_SUMMARY.md  consumer_education_demo.py  dashboard.ps1  demo_consumer_education.py  demo_enhanced_api.py  interactive_positioner.html  position_finder.html  private_key.pem  project_summary.py  pyproject.toml  run_backend.py  run_demo.bat  run_server.py  start_server.py  terminology_verification.py  test_api.py  test_endorsement.py  test_positions.py  ui_improvement_suggestions.py  verify_updates.py
.continue/agents/: new-agent-3.yaml
.continue/rules/: python-formatting---black.md  python-linting---flake8.md
.github/workflows/: ci.yml
LocalAgentCore/InstrumentAnnotator/: parser.py
LocalAgentCore/LegalLexicon/: definitions.json  lineage_tags.json
StateNationalStatus/: index.html  package-lock.json  package.json
backend/: Dockerfile.production  activity_tracking.py  auth.py  error_handler.py  main.py  models.py  requirements.txt
backend/config/: __init__.py  config.py
backend/routes/: annotator.py  auth.py  discharge.py  document_routes.py  documents.py  endorsement.py  generator_routes.py  hello.py  letters.py  nationality.py  packet.py
backend/scripts/: docker-entrypoint.sh
backend/tests/: test_main.py  test_parser.py
config/: endorsement_rules.yaml
deployment/k8s/: backend-deployment.yaml  backend-service.yaml  configmaps.yaml  secrets.yaml  secrets.yaml.template
docs/: DOCKER_SETUP_GUIDE.md  README.md  process_overview.md  strawman_and_sovereignty.md
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
docs/development/: README.md
docs/user/: README.md
frontend/: .env.development  .env.example  .env.production  .eslintrc.js  .prettierignore  .prettierrc  Dockerfile  PERFORMANCE.md  TESTING.md  dev-tools.json  docker-compose.prod.yml  index.html  jest.config.js  netlify.toml  nginx.conf  package-lock.json  package.json  package.test.json  performance.json  tsconfig.json  vercel.json  vite.config.js  vite.config.ts
frontend/.husky/: pre-commit
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/: App.test.jsx  App.test.tsx  App.tsx  ProfessionalStyles.css  apiConfig.ts  main.tsx  (+1 more)
mobile/: App.tsx
remedy_logs/: 2025-10-12_205324753.json  2025-10-12_205324753.txt
scripts/: configure-credentials.ps1  configure-domain-ssl.ps1  configure-environment.ps1  configure-secrets.ps1  credential-configurator.ps1  deploy-production.ps1  deploy-production.sh  deploy.ps1  deployment-checker.ps1  deployment-dashboard.ps1  docker-setup.ps1  domain-configurator.ps1  generate_key.py  manual-docker-setup.cmd  prepare-infrastructure.ps1  quick-deploy.sh
verobrix/: verobrix_cognition.py  verobrix_diag.sh  verobrix_gui.py  verobrix_hygiene.py  verobrix_legal.py  verobrix_provenance.py  verobrix_remediate.sh
verobrix/autotender/: pyproject.toml  requirements.txt
verobrix/autotender/autotender/: generator.py
verobrix/autotender/old_scripts/: clause_scanner.py  coupon_annotator.py  remedy_generator.py
(+150 files in other folders)
