[tool.poetry]
name = "local-agent"
version = "0.1.0"
description = "A full-stack application for legal and financial document processing."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "packages" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pypdf = "^4.2.0"
werkzeug = "^3.0.3"
pytest = "^8.2.2"
reportlab = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"